fix: set z-index img background testimonial section

--- a/styles/layout/testimonials.css
+++ b/styles/layout/testimonials.css
@@ -92,6 +92,7 @@
     top: 50%;
     left: 50%;
     overflow: visible;
+    z-index: -1;
   }
 
   .testimonials__container {
